--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -3625,8 +3625,8 @@
   <div class="col-md-12">
     <div class="row">
       <div class="col-md-12 text-center">
-        <%= f.submit "Guardar Encuesta" ,class:'btn btn-primary btn-lg hidden' , :style => 'border-radius:5px;'%>
-        <a href="http://minsalud.sigmadosbioestadistica.com/" class="btn btn-primary btn-lg" id="Guardar_Sin_Internet">Guardar Encuesta</a>
+        <%= f.submit "Guardar Encuesta" ,class:'btn btn-primary btn-lg hidden' , :style => 'border-radius:5px;' , id:"#Guardar_Sin_Internet"%>
+        <a href="http://minsalud.sigmadosbioestadistica.com/" class="btn btn-primary btn-lg" id="Guardar_Sin_Internet" id="#Guardar_Sin_Internet">Guardar Encuesta</a>
       </div>
     </div>
   </div>  
