--- a/app/views/estadisticas/index.html.erb
+++ b/app/views/estadisticas/index.html.erb
@@ -20,7 +20,7 @@
   <br>
   <div id="Departamentos" class="col-md-12">
   	<label> <strong> L1. Departamentos </strong> </label>
-      <%= column_chart Encuestum.group(:departamento).count(:id), download: true%>
+      <%= column_chart Encuestum.group(:departamento).having("departamento != ?", "--").having("departamento != ?", "").count(:id), download: true%>
     <br>
     <table class="table">
       <thead>
@@ -31,7 +31,7 @@
         </tr>
       </thead>
       <tbody>  
-        <% Encuestum.group(:departamento).count(:id).each do |value,item|%>
+        <% Encuestum.group(:departamento).having("departamento != ?", "--").having("departamento != ?", "").count(:id).sort.each do |value,item|%>
         <tr>
           <td scope="row"><%= value %></td>
           <td><%= item %></td>
