--- a/app/views/estadisticas/index.html.erb
+++ b/app/views/estadisticas/index.html.erb
@@ -31,13 +31,24 @@
         </tr>
       </thead>
       <tbody>  
+        <% total  = 0 %>
+        <% Encuestum.group(:departamento).having("departamento != ?", "--").having("departamento != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
+          <% total = total + item %>
+        <%end%>
         <% Encuestum.group(:departamento).having("departamento != ?", "--").having("departamento != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
         <tr>
           <td scope="row"><%= value %></td>
           <td><%= item %></td>
-          <td><%= number_with_precision(100 * item / total_encuestas, :precision => 1) %></td>
+          <td><%= 100*item/total.to_f %></td>
         </tr>
         <%end%>
+        <thead>
+        <tr>
+          <th scope="col"> <strong> Total </strong></td>
+          <th scope="col"> <strong> <%= total %> </strong></td>
+          <th scope="col"> <strong> 100% </strong></td>
+        </tr>
+        </thead>
       </tbody>  
     </table>
     <br>
