--- a/app/views/estadisticas/index.html.erb
+++ b/app/views/estadisticas/index.html.erb
@@ -53,7 +53,7 @@
     </table>
     <br>
   </div>
-  <div id="Municipio">
+  <div id="Municipio" class="col-md-12">
     <label> <strong> L1. Departamentos </strong> </label>
       <%= column_chart Encuestum.group(:municipio).having("municipio != ?", "--").having("municipio != ?", "").count(:id), download: true%>
     <br>
@@ -66,21 +66,21 @@
         </tr>
       </thead>
       <tbody>  
-        <% total  = 0 %>
+        <% total_municipio  = 0 %>
         <% Encuestum.group(:municipio).having("municipio != ?", "--").having("municipio != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
+          <% total_municipio = total_municipio + item %>
         <%end%>
         <% Encuestum.group(:municipio).having("municipio != ?", "--").having("municipio != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
         <tr>
           <td scope="row"><%= value %></td>
           <td><%= item %></td>
-          <td><%= 100*item/total.to_f(1) %></td>
+          <td><%= 100*item/total_municipio.to_f(1) %></td>
         </tr>
         <%end%>
         <thead>
         <tr>
           <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
+          <th scope="col"> <strong> <%= total_municipio %> </strong></td>
           <th scope="col"> <strong> 100% </strong></td>
         </tr>
         </thead>
@@ -88,41 +88,7 @@
     </table>
     <br>
   </div>
-  <div id="Sexo">
-    <label> <strong> L1. Departamentos </strong> </label>
-      <%= column_chart Encuestum.group(:sexo).having("sexo != ?", "--").having("sexo != ?", "").count(:id), download: true%>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:sexo).having("sexo != ?", "--").having("sexo != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:sexo).having("sexo != ?", "--").having("sexo != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= 100*item/total.to_f(1) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody>  
-    </table>
-    <br>
-  </div>
+
   <div id="Pregunta1">
   	<label> <strong> 1. ¿A qué EPS se encuentra afiliado actualmente?  </strong> </label>
   	<%= bar_chart Encuestum.group(:pregunta1).count(:id) %>
