--- a/app/views/encuesta/index.html.erb
+++ b/app/views/encuesta/index.html.erb
@@ -1,4 +1,30 @@
-<br>
-<H2 class="text-center">Encuesta guardada con Exito!!!</H2>
-<br>
-<%= link_to 'Nueva Encuesta', new_encuestum_path , {class:"btn btn-primary btn-xl"} %>
+<header>  
+  <div class="row">
+    <div class="col-md-4">
+      <img src="<%= asset_path 'bioestadistica.png' %>">
+    </div>
+    <div class="col-md-4">
+      <img src="<%= asset_path 'logo_min_salud.png' %>">
+    </div>
+    <div class="col-md-4">
+      <img src="<%= asset_path 'gss2.png' %>">
+    </div>
+  </div>
+</header>
+<div class="container">
+  <h2 class="text-center">Estudio de evaluación de los servicios de las EPS por parte de los usuarios, en el régimen contributivo y subsidiado.</h2>
+    <small class="form-text text-muted text-center">
+        <p class="text-center">Confidencial: Los datos que se solicitan en este formulario son estrictamente confidenciales y en ningún caso tienen fines fiscales ni pueden utilizarse como prueba judicial  (Ley 79 del 20 de octubre de 1993, Art. 5)</p>
+    </small>
+        <div class="alert alert-danger" role="alert">
+    (ENC: la población a entrevistar, en ningún caso puede estar institucionalizada: Hospitales, geriátricos, cárceles, etc.)
+    </div>
+  <br>
+  <legend>(ENC: LEA PRESENTACIÓN)  Buenos días / tardes/ noches, mi nombre es ______ (ENC: DIGA SU NOMBRE COMPLETO), trabajo para SigmaDos Bioestadistica, Hemos sido contratados por el Ministerio de Salud y Protección Social para la aplicación de una encuesta de evaluación del servicio de las Empresas Promotoras de Salud (EPS) del país. Le agradezco su valiosa colaboración para responder las siguientes preguntas. La duración aproximada son 20 minutos. Sus respuestas serán totalmente confidenciales y serán utilizadas sólo con fines estadísticos.</legend>
+  <br>
+  <div class="alert alert-danger" role="alert">
+    TODAS LAS INSTRUCCIONES EN ESTE FORMATO SON PARA EL ENCUESTADOR
+  </div>
+</div>
+
+<%= render 'form'%>
