--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -1584,19 +1584,19 @@
       <div class="input-group">
         <div class="field" style="padding-left: 5px; padding-right: 5px;">
           <%= f.label :pregunta16_s1, 'Servicio 1' , id:"medicamentos_manejo"%>
-          <%= f.text_field :pregunta16_s1, {class: "form-control", id:"res_pregunta16_s1"}%>
+          <%= f.select :pregunta16_s1, ["Consulta de medicina general","Consulta de medicina interna: internista","Cirugía general","Otras consultas de medicina especializada: cardiología, neurología y ortopedia","Citas prioritarias cita no programada","Urgencias","Hospitalización","Domiciliario: médicos, cuidados","Entrega de medicamentos","Tratamientos asistidos: quimioterapia-radioterapias-diálisis","Programas de promoción de la salud y prevención de la enfermedad (PyP)","Odontología","Exámenes de laboratorio","Radiografías, imágenes o pruebas de diagnóstico","Terapias en la EPS: físicas, respiratorias, ocupacional, de lenguaje","Suministro de oxígeno"],{:include_blank => true}, {class: "form-control", id:"res_pregunta16_s1"} %>
         </div>
         <div class="field" style="padding-left: 5px; padding-right: 5px;">
           <%= f.label :pregunta16_s2, 'Servicio 2' , id:"medicamentos_manejo" %>
-          <%= f.text_field :pregunta16_s2, {class: "form-control", id:"res_pregunta16_s2"}%>
+          <%= f.select :pregunta16_s2, ["Consulta de medicina general","Consulta de medicina interna: internista","Cirugía general","Otras consultas de medicina especializada: cardiología, neurología y ortopedia","Citas prioritarias cita no programada","Urgencias","Hospitalización","Domiciliario: médicos, cuidados","Entrega de medicamentos","Tratamientos asistidos: quimioterapia-radioterapias-diálisis","Programas de promoción de la salud y prevención de la enfermedad (PyP)","Odontología","Exámenes de laboratorio","Radiografías, imágenes o pruebas de diagnóstico","Terapias en la EPS: físicas, respiratorias, ocupacional, de lenguaje","Suministro de oxígeno"],{:include_blank => true}, {class: "form-control", id:"res_pregunta16_s2"} %>
         </div>
         <div class="field" style="padding-left: 5px; padding-right: 5px;">
           <%= f.label :pregunta16_s3, 'Servicio 3' , id:"medicamentos_manejo" %>
-          <%= f.text_field :pregunta16_s3, {class: "form-control", id:"res_pregunta16_s3"}%>
+          <%= f.select :pregunta16_s3, ["Consulta de medicina general","Consulta de medicina interna: internista","Cirugía general","Otras consultas de medicina especializada: cardiología, neurología y ortopedia","Citas prioritarias cita no programada","Urgencias","Hospitalización","Domiciliario: médicos, cuidados","Entrega de medicamentos","Tratamientos asistidos: quimioterapia-radioterapias-diálisis","Programas de promoción de la salud y prevención de la enfermedad (PyP)","Odontología","Exámenes de laboratorio","Radiografías, imágenes o pruebas de diagnóstico","Terapias en la EPS: físicas, respiratorias, ocupacional, de lenguaje","Suministro de oxígeno"],{:include_blank => true}, {class: "form-control", id:"res_pregunta16_s3"} %>
         </div>
         <div class="field" style="padding-left: 5px; padding-right: 5px;">
           <%= f.label :pregunta16_s4, 'Servicio 4' , id:"medicamentos_manejo"%>
-          <%= f.text_field :pregunta16_s4, {class: "form-control", id:"res_pregunta16_s4"}%>
+          <%= f.select :pregunta16_s4, ["Consulta de medicina general","Consulta de medicina interna: internista","Cirugía general","Otras consultas de medicina especializada: cardiología, neurología y ortopedia","Citas prioritarias cita no programada","Urgencias","Hospitalización","Domiciliario: médicos, cuidados","Entrega de medicamentos","Tratamientos asistidos: quimioterapia-radioterapias-diálisis","Programas de promoción de la salud y prevención de la enfermedad (PyP)","Odontología","Exámenes de laboratorio","Radiografías, imágenes o pruebas de diagnóstico","Terapias en la EPS: físicas, respiratorias, ocupacional, de lenguaje","Suministro de oxígeno"],{:include_blank => true}, {class: "form-control", id:"res_pregunta16_s4"} %>
         </div>
       </div>
     </div>  
@@ -3571,7 +3571,7 @@
       </div>
       <div>
           <%= f.label :pregunta59, '59. ¿Cuantos años cumplidos tiene el acompañante?' , id:"identicacion_caracterizacion_usuario"%>
-          <%= f.text_field :pregunta59, {class: "form-control", id:"identicacion_caracterizacion_usuario59"}%>
+          <%= f.select :años, ["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50","51","52","53","54","55","56","57","58","59","60","61","62","63","64","65","66","67","68","69","70","71","72","73","74","75","76","77","78","79","80","81","82","83","84","85","86","87","88","89","90","91","92","93","94","95","96","97","98","99"],{:include_blank => true}, {class: "form-control", id:"identicacion_caracterizacion_usuario59"} %>
       </div>
       <div>
           <%= f.label :pregunta60, '60. Parentesco del informante idóneo' , id:"identicacion_caracterizacion_usuario"%>
